--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Mysql Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/loans
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/corploans
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=
